# multi-branching-poc

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: cut_off.yml  generate_change_log_bump_version.yml  merge_to_target_branch.yml  prepare_release.yml  release.yaml  release.yml  release_preparation.yml
core/: logger.py
