[tool.poetry]
name = "multi-branching-poc"
version = "0.1.0"
description = ""
authors = ["Jeremy Tee <jeremytee97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
